<resources>
    <string name="app_name">edalkurek</string>
    <string name="kayit_ol">KAYIT OL</string>
    <string name="girisYap">GİRİŞ YAP</string>
    <string name="userName">Kullanıcı Adı</string>
    <string name="password">Şifre</string>
    <string name="mail">E-mail</string>
    <string name="giris_yap">Giriş Yap</string>
    <string name="e_mail">E-mail</string>
    <string name="sifre">Şifre</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Çıkış Yap</string>
</resources>
