<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GirisEkrani">

    <include layout="@layout/actionbar_app"
        android:id="@+id/actionBarGiris"/>

    <TextView
        android:id="@+id/Ltv_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/giris_yap"
        android:textColor="@android:color/black"
        android:layout_below="@id/actionBarGiris"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:textSize="20sp"
        />

    <TextView
        android:id="@+id/Ltv_info2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/e_mail"
        android:layout_below="@id/Ltv_info"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        />

    <EditText
        android:id="@+id/Ltv_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Ltv_info2"
        android:hint="@string/userName"
        android:inputType="textEmailAddress"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        />

    <EditText
        android:id="@+id/tv_LuserSifre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Ltv_username"
        android:hint="@string/sifre"
        android:inputType="textPassword"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        />



    <Button
        android:id="@+id/btnGiris"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/giris_yap"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="13dp"
        android:layout_marginBottom="35dp"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        />

</RelativeLayout>