<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AnaEkran"
    android:background="@color/colorPrimary"
    android:padding="20dp"
    >

    
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/tv_appName"
        android:layout_marginTop="30dp"
        />
    
<TextView
    android:id="@+id/tv_appName"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/app_name"
    android:textSize="35sp"
    android:textColor="@android:color/white"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="35dp"
    />


    <Button
        android:id="@+id/btn_giris"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/girisYap"
        android:background="@color/ColorRedButton"
        android:textColor="@android:color/white"
        android:layout_above="@id/btn_kayit"
        android:layout_marginBottom="25dp"
        />

    <Button
        android:id="@+id/btn_kayit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kayit_ol"
        android:background="@android:color/white"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        />

</RelativeLayout>